--- a/.github/workflows/contribution.yml
+++ b/.github/workflows/contribution.yml
@@ -11,14 +11,18 @@ jobs:
   build:
     name: 'Build'
     uses: ./.github/workflows/build.yml
+    with:
+      image: mcr.microsoft.com/playwright:v1.55.1
   test:
     name: 'Test'
     uses: ./.github/workflows/test.yml
+    with:
+      image: mcr.microsoft.com/playwright:v1.55.1
     needs:
       - build
   deploy:
     name: 'Deploy'
-    uses: ./.github/workflows/deploy.yml
     if: github.actor != 'dependabot[bot]'
+    uses: ./.github/workflows/deploy.yml
     needs:
       - test
