--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,11 @@ name: 'Test'
 
 on:
   workflow_call:
+    inputs:
+      image:
+        description: 'Docker image to be used in workflow.'
+        required: true
+        type: string
 
 permissions:
   contents: read
@@ -11,7 +16,7 @@ jobs:
     name: 'E2E'
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.55.1
+      image: ${{ inputs.image }}
       options: --user 1001
     steps:
       - name: 'Checkout'
@@ -30,7 +35,7 @@ jobs:
     name: 'A11y'
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.55.1
+      image: ${{ inputs.image }}
       options: --user 1001
     steps:
       - name: 'Checkout'
@@ -49,7 +54,7 @@ jobs:
     name: 'VRT'
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.55.1
+      image: ${{ inputs.image }}
       options: --user 1001
     strategy:
       fail-fast: false
@@ -79,7 +84,7 @@ jobs:
     name: 'LH'
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.55.1
+      image: ${{ inputs.image }}
       options: --user 1001
     strategy:
       fail-fast: false
