refactor: update several names | sas

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       - name: 'Upload'
         uses: actions/upload-artifact@v4
         with:
-          name: templates
+          name: commissions
           path: ./dist
   build-production:
     name: 'Production'
@@ -62,5 +62,5 @@ jobs:
       - name: 'Upload'
         uses: actions/upload-artifact@v4
         with:
-          name: templates-prod
+          name: commissions-prod
           path: ./dist
