--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   deploy:
-    name: 'Templates'
+    name: 'Commissions'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
@@ -22,7 +22,7 @@ jobs:
       - name: 'Download'
         uses: actions/download-artifact@v5
         with:
-          name: templates-prod
+          name: commissions-prod
           path: "./${{ github.ref_name }}"
       - name: 'Deploy'
         run: |
