--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "astro"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
