--- a/astro/package.json
+++ b/astro/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@porsche-design-system/components-js": "^3.29.0",
-    "astro": "^5.14.1"
+    "@tailwindcss/vite": "^4.1.14",
+    "astro": "^5.14.1",
+    "tailwindcss": "^4.1.14"
   },
   "volta": {
     "extends": "../package.json"
